# aguide

./: .gitignore  camera.py  image.py  image_capture.py  main.py  proclib.py  stepperDriver.py  test.py  testcapture.py
env/: .vimrc  dependencies  interfaces  wpa_supplicant.conf
guider2/: .gitignore  config.html  framefactory.py  frameprocessor.py  fsm.py  index.html  indexpage.py  infolog.py  inotify.py  main.py  mjpeg.py  nativestepperdriver.py  pyproclib.py  service.sh  stepperdriver.py  style.css  viewfinder.py  wui.py
guider2/test/: captureFactory.py
playground/: camera.py  continous.py  convert.history.txt  image.py  ledtest.py  pypng.py  stepper.py
proclib/: CMakeLists.txt
proclib/src/: CMakeLists.txt  ImageProcessor.cc  ImageProcessor.h  commit.patch  flow.txt  imgproc.cc  imgproc.h
proclib/test/: CMakeLists.txt  TestFrame.cc  TestFrame.h  img_sample.h  test_actions.h  test_brightestarea.cc  test_brightestslice.cc  test_calculatemove.cc  test_calculatemove_with_lock.cc  test_continous_shifting.cc  test_cwrapper_spotcoordinates.cc  test_cwrapper_tresholding.cc  test_imgproc.cc  test_lock_on_spot.cc  test_lock_out_of_spot.cc  test_locking_enabled_new_spot.cc  test_shifting.cc  test_slice_indexing.cc  test_spotcoordinates.cc  test_spotcoordinates_not_found.cc  test_thresholding.cc
pyproclib/src/: .proclib.py.swp  proclib.py
webfwk/: client.js  content.py  evfmock.py  main.css  main.py  mock_setup.sh  style.css
webfwk/templates/: main.html.template
webui/: continous_capure.py  index.html  index.py  main.py  ui.py  viewfinder.py
webui/flask/: ui.py
webui/static/: stats.js
webui/templates/: ui.html
